--- a/src/main/resources/broker_server.cfg
+++ b/src/main/resources/broker_server.cfg
@@ -6,7 +6,7 @@ addon.apollo.server.vh.id=ubicity-host
 addon.apollo.server.vh.name=localhost
 
 addon.apollo.server.tcp.connector.id=ubicity-tcp
-addon.apollo.server.tcp.connector.bind=tcp://0.0.0.0:61613
+addon.apollo.server.tcp.connector.bind=tcp://localhost:61613
 
 addon.apollo.server.ws.connector.id=ubicity-ws
 addon.apollo.server.ws.connector.bind=ws://localhost:61614
