--- a/src/main/resources/broker_server.cfg
+++ b/src/main/resources/broker_server.cfg
@@ -1,12 +1,14 @@
-addon.apollo.name=Apollo-Broker
+include = env.cfg
 
-addon.broker.server.embedded=true
+plugin.apollo.name=Apollo-Broker
 
-addon.apollo.server.vh.id=ubicity-host
-addon.apollo.server.vh.name=localhost
+plugin.broker.server.embedded=true
 
-addon.apollo.server.tcp.connector.id=ubicity-tcp
-addon.apollo.server.tcp.connector.bind=tcp://localhost:61613
+plugin.apollo.server.vh.id=ubicity-host
+plugin.apollo.server.vh.name=localhost
 
-addon.apollo.server.ws.connector.id=ubicity-ws
-addon.apollo.server.ws.connector.bind=ws://localhost:61623
+plugin.apollo.server.tcp.connector.id=ubicity-tcp
+plugin.apollo.server.tcp.connector.bind=tcp://localhost
+
+plugin.apollo.server.ws.connector.id=ubicity-ws
+plugin.apollo.server.ws.connector.bind=ws://localhost
